Update command suggestions